Fix for #165950, Can't add bundled SDK 3.0 as CDC platform after it was removed